# jira-flow-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 20260706_2250_9e687de34bce_baseline_schema.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  logging.py  tenant_context.py
backend/app/db/: bootstrap.py  models.py  session.py  types.py
backend/app/forge/: fit_auth.py  lifecycle.py  middleware.py
backend/app/routers/: alerts.py  dev.py  exports.py  forge_backfill.py  forge_issue.py  forge_lifecycle.py  forge_schedule.py  forge_sync.py  insights.py  issues.py  metrics.py  personal_data.py  settings.py  sprints.py  sync.py
backend/app/schemas/: api.py
backend/app/seeds/: demo.py
backend/app/services/: ai_explanation.py  alert_destinations.py  alert_dispatch.py  alert_messages.py  alert_service.py  cfd.py  cycle_scatter.py  duration_format.py  ingestion_service.py  insight_service.py  jira_client.py  metrics_service.py  recompute_service.py  resend_service.py  slicing_service.py  sprint_service.py  status_id_backfill.py  transition_service.py  url_helpers.py  webhook_dispatcher.py  wip_aging.py  wip_limits_service.py  working_time.py
backend/tests/: conftest.py  test_ai_explanation.py  test_alert_dispatch.py  test_alerts.py  test_calendar_windows.py  test_cfd_and_scatter.py  test_display_url_endpoint.py  test_duration_format.py  test_fit_auth.py  test_forge_lifecycle.py  test_forge_middleware.py  test_forge_sync_router.py  test_ingestion_helpers.py  test_insight_engine.py  test_jira_client.py  test_metrics_engine.py  test_metrics_persistence.py  test_migration_lint.py  test_personal_data.py  test_pipeline_e2e.py  test_postgres_rls_smoke.py  test_project_isolation.py  test_resend_service.py  test_routers.py  test_sprint_service.py  test_status_id_backfill.py  test_status_rename_aggregation.py  test_tenant_context_done_terminal_merge.py  test_tenant_isolation.py  test_time_slices.py  test_transitions.py  test_url_helpers.py  test_wip_aging.py  test_wip_limits_service.py  test_working_time.py
docs/: PUBLISHING.md  SETUP.md
docs/engineering/: README.md  definition-of-done.md  glossary.md  handoff-template.md  release-process.md  runbook.md
docs/engineering/adr/: 0000-template.md  0001-modular-monolith.md  0002-stack-fastapi-nextjs.md  0003-sqlite-default-postgres-optional.md  0004-utc-datetime-decorator.md  0005-idempotency-delete-and-replace.md  0006-deterministic-engine-ai-text-only.md  0007-bottleneck-scoring.md  0008-alert-idempotency-key.md  0009-tooling-baseline.md  0010-distribution-atlassian-connect.md  0011-multi-tenancy-row-level.md  0012-cloud-aws-app-runner-rds.md  0013-iac-cdk-python.md  0014-multi-tenant-schema-details.md  0015-atlassian-connect-lifecycle.md  0016-jwt-auth-middleware.md  0017-frontend-embedding-and-api-prefix.md  0018-deploy-workflow-and-ecr-split.md  0019-pivot-to-forge.md  0020-app-runner-sunset-defer-migration.md  0021-project-scoping-for-jira-project-page.md  0022-wip-limits-as-first-class-concept.md  0023-sprint-bucketed-windows.md  0024-webhook-driven-sync.md  0025-historical-backfill-consumer.md  0026-postgres-rls-defense-in-depth.md  0027-public-domain-and-aws-edge.md  0029-in-process-jwks-refresh.md  0030-operational-alerting.md  0032-backfill-browser-loop-supersedes-0025.md  0033-backfill-consumer-queue-rebuild.md  0036-vendor-managed-anthropic-key.md  0037-alert-delivery-destinations.md  0038-best-in-category-defaults-and-done-terminal-merge.md  0039-frontend-testing-strategy.md  0040-resend-for-customer-facing-email.md  0041-state-based-alert-refire-daily-bucket.md  0042-pause-statuses-and-bottleneck-attribution-scope.md  0043-work-schedule-and-working-time-duration-math.md  (+4 more)
docs/engineering/plans/: phase-1-private-install.md  phase-2-forge-migration.md
docs/jira_flow_intelligence/: README.md
docs/jira_flow_intelligence/03_TECHNICAL_ARCHITECTURE/: README.md  (+4 more)
docs/screenshots/: README.md
docs/user-manual/: README.md  alerts.md  charts-explained.md  faq.md  getting-started.md  glossary.md  settings.md  windows-and-comparisons.md  wip-limits.md
forge-prod/: .gitignore  manifest.yml  package-lock.json  package.json  tsconfig.json
forge-prod/frontend/: .gitignore  .npmrc  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
forge-prod/src/: index.ts
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: __init__.py  _config.py  compute_stack.py  data_stack.py  ecr_stack.py  network_stack.py  observability_stack.py
infra/tests/: test_stacks.py
scripts/: aws-bootstrap.sh  github-environments.sh
(+79 files in other folders)
