[project]
name = "flow-intelligence"
version = "0.1.0"
description = "Jira Flow Intelligence — deterministic flow metrics, bottleneck detection, alerts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
    # alembic is needed at runtime now: backend/app/main.py runs
    # `alembic upgrade head` on startup so deploys self-migrate.
    "alembic>=1.14.0",
    # structlog: JSON logs in prod for CloudWatch Logs Insights queries;
    # human-readable in dev. Wraps stdlib logging so existing
    # `logger.info("msg %s", arg)` calls keep working.
    "structlog>=24.4.0",
    # boto3: AWS SDK — Secrets Manager access + the SES email path
    # (proactive-notification emails per CLAUDE.md rule #9).
    # Not optional — the CLAUDE.md rule makes the emails non-negotiable
    # so the dependency must be present at deploy, not gated behind an
    # extras group like `ai`.
    "boto3>=1.34.0",
    # resend: customer-facing transactional email (ADR-0040). AWS SES
    # production access was denied 2026-05-28; Resend handles the
    # customer-facing paths (alerts, backfill notifications, failure
    # digest). SES stays wired for the maintainer-self
    # path only. Official SDK, httpx-based.
    "resend>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
ai = ["anthropic>=0.39.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
]

# ----- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["backend"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]
markers = [
    "postgres: smoke tests that need a real Postgres at \\$DATABASE_URL; skipped by default in the SQLite-only suite. Run via the `backend-postgres` CI job or locally with `DATABASE_URL=postgresql+psycopg://… pytest -m postgres`.",
]

# ----- Coverage ------------------------------------------------------------
[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "backend/app/seeds/*",
    "backend/app/main.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

# ----- Ruff ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]
extend-exclude = [".venv", "frontend", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line-length handled by formatter
    "B008",  # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["B011", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ----- Mypy ----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["backend/app/services", "backend/app/db", "backend/app/forge"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["dateutil.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true
